--- a/src/app/profiles/service-profiles/service-profiles-edit/service-profiles-edit.component.html
+++ b/src/app/profiles/service-profiles/service-profiles-edit/service-profiles-edit.component.html
@@ -1,139 +1,137 @@
-<div class="row">
-    <div class="col-xs-12 ">
-        <app-form-header [backButton]="backButton" [title]="title">
-        </app-form-header>
-        <form [formGroup]="serviceProfileForm" (ngSubmit)="onSubmit()" class="os2-form mt-3 px-md-5 py-md-4">
-            <!-- Service-profile name
+<app-form-header [backButton]="backButton" [title]="title">
+</app-form-header>
+<form (ngSubmit)="onSubmit()" class="os2-form mt-3 px-md-5 py-md-4">
+    <div *ngIf="errorMessages" class="error-messages p-3">
+        <ul class="mb-0">
+            <li *ngFor="let error of errorMessages">
+                {{error}}
+            </li>
+        </ul>
+    </div>
+    <!-- Service-profile name
             A name to identify the service-profile. -->
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="form-group">
-                        <label for="name"
-                            class="form-label asterisk-if-mandatory">{{'PROFILES.SERVICE_PROFILE.NAME' | translate}}</label>
-                        <input type="text" id="name" formControlName="name" class="form-control" />
-                        <div *ngIf="f.name.touched && f.name.invalid" class="alert alert-danger">
-                            <div *ngIf="f.name.errors.required">Du skal skrive et navn</div>
-                            <div *ngIf="f.name.errors.cannotContainSpace">Der må ikke være nogen mellemrum</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Add gateway meta-data
+    <div class="row">
+        <div class="col-xs-12 form-group">
+            <label for="name"
+                class="form-label asterisk-if-mandatory">{{'PROFILES.SERVICE_PROFILE.NAME' | translate}}</label>
+            <input type="text" class="form-control" id="name" name="name"
+                [placeholder]="'PROFILES.SERVICE_PROFILE.NAME_PLACEHOLDER' | translate" maxlength="50" required
+                [(ngModel)]="serviceProfile.name"
+                [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('name'), 'is-valid' : formFailedSubmit && !errorFields.includes('name')}">
+        </div>
+    </div>
+    <!-- Add gateway meta-data
              GW metadata (RSSI, SNR, GW geoloc., etc.) are added to the packet sent to the application-server.-->
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="form-group">
-                        <mat-checkbox id="addGWMetaData" formControlName="addGWMetaData">
-                            <label for="name"
-                                class="form-check-label text--bold">{{'PROFILES.SERVICE_PROFILE.ADDGWMETADATA' | translate}}</label>
-                        </mat-checkbox>
-                        <p>{{'PROFILES.SERVICE_PROFILE.ADDGWMETADATAEXPLAINED' | translate}}</p>
-                    </div>
-                </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="form-group">
+                <mat-checkbox id="addGWMetaData" name="addGWMetaData" [(ngModel)]="serviceProfile.addGWMetaData">
+                    <label for="name"
+                        class="form-check-label text--bold">{{'PROFILES.SERVICE_PROFILE.ADDGWMETADATA' | translate}}</label>
+                </mat-checkbox>
+                <p>{{'PROFILES.SERVICE_PROFILE.ADDGWMETADATAEXPLAINED' | translate}}</p>
             </div>
+        </div>
+    </div>
 
 
-            <!-- Enable network geolocation
+    <!-- Enable network geolocation
                 When enabled, the network-server will try to resolve the location of the devices under this service-profile. Please note that you need 
                 to have gateways supporting the fine-timestamp feature and that the network-server needs to be configured in order to provide geolocation support.
              -->
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="form-group">
-                        <mat-checkbox id="nwkGeoLoc" formControlName="nwkGeoLoc">
-                            <label for="name"
-                                class="form-check-label text--bold">{{'PROFILES.SERVICE_PROFILE.ADDGWMETADATA' | translate}}</label>
-                        </mat-checkbox>
-                        <p class="">{{'PROFILES.SERVICE_PROFILE.ADDGWMETADATAEXPLAINED' | translate}}</p>
-                    </div>
-                </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="form-group">
+                <mat-checkbox id="nwkGeoLoc" name="nwkGeoLoc" [(ngModel)]="serviceProfile.nwkGeoLoc">
+                    <label for="name"
+                        class="form-check-label text--bold">{{'PROFILES.SERVICE_PROFILE.ADDGWMETADATA' | translate}}</label>
+                </mat-checkbox>
+                <p class="">{{'PROFILES.SERVICE_PROFILE.ADDGWMETADATAEXPLAINED' | translate}}</p>
             </div>
+        </div>
+    </div>
 
-            <!-- Device-status request frequency
+    <!-- Device-status request frequency
                 Frequency to initiate an End-Device status request (request/day). Set to 0 to disable.
               -->
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="form-group">
-                        <label for="name"
-                            class="form-label">{{'PROFILES.SERVICE_PROFILE.DEVSTATUSREQFREQ' | translate}}</label>
-                        <input type="text" id="devStatusReqFreq" formControlName="devStatusReqFreq"
-                            class="form-control" />
-                        <label>{{'PROFILES.SERVICE_PROFILE.DEVICEFREQUENCYEXPLANIED' | translate}}</label>
-                    </div>
-                </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="form-group">
+                <label for="name" class="form-label">{{'PROFILES.SERVICE_PROFILE.DEVICEFREQUENCY' | translate}}</label>
+                <input type="text" id="devStatusReqFreq" name="devStatusReqFreq" class="form-control" [placeholder]="0"
+                    [(ngModel)]="serviceProfile.devStatusReqFreq" step=".000001" min="-180" max="180" maxlength="9"
+                    (keyup)="onCoordinateKey($event)" />
+                <label>{{'PROFILES.SERVICE_PROFILE.DEVICEFREQUENCYEXPLANIED' | translate}}</label>
             </div>
+        </div>
+    </div>
 
-            <!-- Checkbox
+    <!-- Checkbox
                 Report device battery level to application-server
                -->
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="form-group">
-                        <mat-checkbox id="reportDevStatusBattery" formControlName="reportDevStatusBattery">
-                            <label for="name" class="form-check-label text--bold"
-                                style="white-space: initial">{{'PROFILES.SERVICE_PROFILE.REPORTBATTERYSTATUS' | translate}}</label>
-                        </mat-checkbox>
-                    </div>
-                </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="form-group">
+                <mat-checkbox id="reportDevStatusBattery" name="reportDevStatusBattery"
+                    [(ngModel)]="serviceProfile.reportDevStatusBattery">
+                    <label for="name" class="form-check-label text--bold"
+                        style="white-space: initial">{{'PROFILES.SERVICE_PROFILE.REPORTBATTERYSTATUS' | translate}}</label>
+                </mat-checkbox>
             </div>
+        </div>
+    </div>
 
 
 
-            <!-- Checkbox
+    <!-- Checkbox
                 Report device link margin to application-server
                -->
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="form-group">
-                        <mat-checkbox id="reportDevStatusMargin" formControlName="reportDevStatusMargin">
-                            <label for="name" class="form-check-label text--bold"
-                                style="white-space: initial">{{'PROFILES.SERVICE_PROFILE.REPORTBATTERYMARGIN' | translate}}</label>
-                        </mat-checkbox>
-                    </div>
-                </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="form-group">
+                <mat-checkbox id="reportDevStatusMargin" name="reportDevStatusMargin"
+                    [(ngModel)]="serviceProfile.reportDevStatusMargin">
+                    <label for="name" class="form-check-label text--bold"
+                        style="white-space: initial">{{'PROFILES.SERVICE_PROFILE.REPORTBATTERYMARGIN' | translate}}</label>
+                </mat-checkbox>
             </div>
-
-
-
-            <!-- DR MIN & MAX RATE -->
-            <div class="row">
-                <div class="col-6">
-                    <div class="form-group">
-                        <label for="name"
-                            class="form-label">{{'PROFILES.SERVICE_PROFILE.DRRATEMIN' | translate}}</label>
-                        <input type="text" id="drMin" formControlName="drMin" class="form-control" />
-                        <label>Minimums tilladte data rate. Brugt til ADR.</label>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <div class="form-group">
-                        <label for="name"
-                            class="form-label">{{'PROFILES.SERVICE_PROFILE.DRRATEMAX' | translate}}</label>
-                        <input type="text" id="drMax" formControlName="drMax" class="form-control" />
-                        <Label>Maximums tilladte data rate. Brugt til ADR.</Label>
-                    </div>
-                </div>
-                <div *ngIf="f.drMin.touched && f.drMin.invalid || f.drMax.touched && f.drMax.invalid"
-                    class="alert alert-danger">
-                    <div *ngIf="f.drMin.errors.required">Du skal vælge et minimums rate</div>
-                    <div *ngIf="f.drMax.errors.required">Du skal vælge et maximums rate</div>
-                </div>
-            </div>
-
-            <!-- Buttons -->
-            <div class="row mt-5">
-                <div class="col-xs-12">
-                    <button type="button" class="btn btn-light" (click)="onCancel()">
-                        {{'PROFILES.SERVICE_PROFILE.CANCEL' | translate}}
-                    </button>
-                    <button type="submit" class="btn btn-dark pl-3" [disabled]="!serviceProfileForm.valid">
-                        {{'PROFILES.SERVICE_PROFILE.SAVE' | translate}}
-                    </button>
-
-                </div>
-            </div>
-
-        </form>
+        </div>
     </div>
-</div>
+
+
+
+    <!-- DR MIN & MAX RATE -->
+    <div class="row">
+        <div class="col-6">
+            <div class="form-group">
+                <label for="name" class="form-label">{{'PROFILES.SERVICE_PROFILE.DRRATEMIN' | translate}}</label>
+                <input type="number" id="drMin" name="drMin" class="form-control" [(ngModel)]="serviceProfile.drMin"
+                    step="0" min="-180" max="180" maxlength="9" (keyup)="onCoordinateKey($event)" [placeholder]="0" />
+                <label>{{'PROFILES.SERVICE_PROFILE.DRRATEMINEXPLAINED' | translate}}</label>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="form-group">
+                <label for="name" class="form-label">{{'PROFILES.SERVICE_PROFILE.DRRATEMAX' | translate}}</label>
+                <input type="number" id="drMax" name="drMax" class="form-control" [(ngModel)]="serviceProfile.drMax"
+                    step="0" min="-180" max="180" maxlength="9" (keyup)="onCoordinateKey($event)" [placeholder]="0" />
+                <Label>{{'PROFILES.SERVICE_PROFILE.DRRATEMAXEXPLAINED' | translate}}</Label>
+            </div>
+        </div>
+    </div>
+
+    <!-- Buttons -->
+    <div class="row mt-5">
+        <div class="col-xs-12">
+            <div class="float-right">
+                <button type="button" class="btn btn-light" (click)="routeBack()">
+                    {{'PROFILES.SERVICE_PROFILE.CANCEL' | translate}}
+                </button>
+                <button type="submit" class="btn btn-dark ml-3" [disabled]="!'is-valid'">
+                    {{'PROFILES.SERVICE_PROFILE.SAVE' | translate}}
+                </button>
+            </div>
+        </div>
+    </div>
+
+</form>
