--- a/src/assets/scss/elements/_buttons.scss
+++ b/src/assets/scss/elements/_buttons.scss
@@ -18,8 +18,9 @@ a {
       @extend .btn;
       color: $color-text-white;
       border: solid calculateRem(1) $button-primary-border-color;
-      background: $button-primary-bg;
+      background: linear-gradient(180deg, $button-primary-bg 0%, $button-primary-bg 100%);
       box-shadow: none;
+
 
       &:hover,
       &.hover,
@@ -51,7 +52,9 @@ a {
       .disabled {
         pointer-events: none;
         cursor: default;
-        background-color: #8C8C97;
+        //background-color: #8C8C97;
+        background-color: $orange-outline;
+        border-color: $orange-outline;
       }
     }
 
@@ -151,23 +154,6 @@ a {
 //############################### Old stuff - needs to be replaced with the above code ####################
 //#########################################################################################################
 
-// .btn-primary {
-//   border: 1px solid $orange;
-// }
-
-// .btn-primary,
-// .btn-primary:hover,
-// .btn-primary:active,
-// .btn-primary:visited,
-// .btn-primary:focus {
-//   background: linear-gradient(180deg, $orange-light 0%, $orange 100%);
-//   border-color: $orange;
-
-//   &:disabled {
-//     background-color: $orange-outline;
-//     border-color: $orange-outline;
-//   }
-// }
 
 .btn-dark,
 .btn-dark:hover,
@@ -191,9 +177,9 @@ a {
 .btn-light:active,
 .btn-light:visited,
 .btn-light:focus {
-  background-color: transparent;
+  background-color: linear-gradient(180deg, $black-light 0%, $black 100%);
   border-color: $black;
-  color: $black;
+  color: $white;
 }
 
 .back-button {
