--- a/src/app/views/datatarget/datatarget-tabel-row/datatarget-tabel-row.component.html
+++ b/src/app/views/datatarget/datatarget-tabel-row/datatarget-tabel-row.component.html
@@ -2,8 +2,7 @@
   <a [routerLink]="['datatarget', datatarget.id]" routerLinkActive="active"
     class="application-link">{{datatarget.name}}</a></td>
 <td class="position-relative pr-3">
-  {{datatarget.type}}
-
+  {{datatarget.type | translate}}
 </td>
 <td>
   <div class="dropdown">
