--- a/src/app/views/administration-gateway/list-lora-gateway/list-lora-gateway.component.html
+++ b/src/app/views/administration-gateway/list-lora-gateway/list-lora-gateway.component.html
@@ -1,9 +1,8 @@
 <div class="px-sm-5 py-sm-4">
   <div class="row mb-5">
-    <app-top-bar [sort]="sort" [(selectedSortId)]="selectedSortId" [pageLimit]="pageLimit"
+    <app-top-bar [pageLimit]="pageLimit"
       [title]="'NAV.MY-LORA-GATEWAYS' | translate" [ctaLabel]="'FORM.CREATE-NEW-LORA-GATEWAY' | translate"
-      [ctaRouterLink]="'edit-gateway'" (updatePageLimit)="updatePageLimit($event)"
-      (selectedSortChange)="changeSort($event)">
+      [ctaRouterLink]="'edit-gateway'" >
     </app-top-bar>
   </div>
   <div class="row">
