--- a/src/app/admin/users/user-edit/user-edit.component.html
+++ b/src/app/admin/users/user-edit/user-edit.component.html
@@ -41,7 +41,7 @@
             {{'USERS.FORM.ACTIVE' | translate}}</mat-slide-toggle>
     </div>
     <div class="row mb-3">
-        <mat-slide-toggle [(ngModel)]="user.globalAdmin" id="permission" name="permission">
+        <mat-slide-toggle [(ngModel)]="user.globalAdmin" id="globalAdmin" name="globalAdmin">
             {{'USERS.FORM.GLOBAL-ADMIN' | translate}}</mat-slide-toggle>
     </div>
     <div class="form-group mt-5 clearfix">
