--- a/src/app/sigfox/sigfox-groups-detail/sigfox-device-types-edit/sigfox-device-types-edit.component.html
+++ b/src/app/sigfox/sigfox-groups-detail/sigfox-device-types-edit/sigfox-device-types-edit.component.html
@@ -37,11 +37,14 @@
             <div class="form-group mt-3 col-12">
                 <mat-form-field appearance="fill">
                     <mat-label>{{'QUESTION.SIGFOX.DEVICETYPE.CHOOSE-CONTRACT' | translate}}</mat-label>
-                    <mat-select matNativeControl name="contractId" [(ngModel)]="sigfoxDeviceType.contractId">
-                        <mat-option *ngFor="let contract of sigfoxContracts" [value]="contract.id">
+                    <select matNativeControl name="contractId" 
+                        [(ngModel)]="sigfoxDeviceType.contractId">
+                        <option *ngFor="let contract of sigfoxContracts" 
+                            [value]="contract.id"
+                            [selected]="contract.id === sigfoxDeviceType.contractId">
                             {{contract.name}}
-                        </mat-option>
-                    </mat-select>
+                        </option>
+                    </select>
                 </mat-form-field>
             </div>
         </div>
