--- a/src/app/applications/bulk-import/bulk-import.component.html
+++ b/src/app/applications/bulk-import/bulk-import.component.html
@@ -64,7 +64,7 @@
 
         <ng-container matColumnDef="type">
             <th mat-header-cell *matHeaderCellDef> {{ 'APPLICATION.BULK.TYPE' | translate }} </th>
-            <td mat-cell *matCellDef="let element"> {{element.device?.type}} </td>
+            <td mat-cell *matCellDef="let element"> {{"IOT-DEVICE-TYPES." + element.device?.type | translate}} </td>
         </ng-container>
 
         <ng-container matColumnDef="importStatus">
