--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.html
@@ -3,144 +3,19 @@
 </ng-container>
 <mat-tab-group animationDuration="200ms" class=" jumbotron m-md-4 p-md-3">
     <mat-tab label="{{'IOTDEVICE.DETAIL-TAB' | translate}}">
-        <div class=" jumbotron m-md-4 p-md-3">
-            <h4>{{ 'IOTDEVICE.NAME' | translate }}</h4>
-            <p class="mb-5">{{device.name}}</p>
-            <h4>{{ 'IOTDEVICE.TYPE' | translate }}</h4>
-            <p class="mb-5">{{ 'IOT-DEVICE-TYPES.' + device.type | translate}}</p>
-            <h4>{{ 'IOTDEVICE.COMMENT' | translate }}</h4>
-            <div *ngIf="device.comment; then thenBlock else elseBlock"> </div>
-            <ng-template #thenBlock>
-                <p class="mb-5">{{device.comment}}</p>
-            </ng-template>
-            <ng-template #elseBlock>
-                <p class="mb-5">{{ 'IOTDEVICE.NOCOMMENT' | translate}}</p>
-            </ng-template>
-            <h4>{{ 'IOTDEVICE.LOCATION' | translate }}</h4>
-            <div *ngIf="device.location; else locationElseBlock">
-                <div class="row mb-5">
-                    <div class="col-6">
-                        <h6>{{ 'IOTDEVICE.LONGITUDE' | translate }}</h6>
-                        <p>{{longitude}}</p>
-                    </div>
-                    <div class="col-6">
-                        <h6>{{ 'IOTDEVICE.LATITUDE' | translate }}</h6>
-                        <p>{{latitude}}</p>
-                    </div>
-                </div>
-            </div>
-            <ng-template #locationElseBlock>
-                <p class="mb-5">{{ 'IOTDEVICE.NOLOCATION' | translate}}</p>
-            </ng-template>
-            <h4>{{ 'IOTDEVICE.COMMENTONLOCATION' | translate }}</h4>
-            <div *ngIf="device.commentOnLocation; else locationCommentElseBlock">
-                <p class="mb-5">{{device.commentOnLocation}}</p>
-            </div>
-        </div>
-    </div>
-    <ng-template #locationElseBlock>
-        <p class="mb-5">{{ 'IOTDEVICE.NOLOCATION' | translate}}</p>
-    </ng-template>
-    <h4>{{ 'IOTDEVICE.COMMENTONLOCATION' | translate }}</h4>
-    <div *ngIf="device.commentOnLocation; else locationCommentElseBlock">
-        <p class="mb-5">{{device.commentOnLocation}}</p>
-    </div>
-    <ng-template #locationCommentElseBlock>
-        <p class="mb-5">{{ 'IOTDEVICE.NOCOMMENTONLOCATION' | translate}}</p>
-    </ng-template>
-    <!-- IF  Lora device-->
-    <ng-container *ngIf="device.type === 'LORAWAN' && device.lorawanSettings">
-        <h4>{{ 'IOTDEVICE.LORA.DEVEUI' | translate }}</h4>
-        <p class="mb-5">{{device.lorawanSettings.devEUI}}</p>
-        <h4>{{ 'IOTDEVICE.LORA.SERVICEPROFILE' | translate }}</h4>
-        <p class="mb-5">{{serviceProfileName}}</p>
-        <h4>{{ 'IOTDEVICE.LORA.DEVICEPROFILE' | translate }}</h4>
-        <p class="mb-5">{{deviceProfileName}}</p>
-        <ng-container *ngIf="OTAA">
-            <h4>{{ 'IOTDEVICE.LORA.OTAAAPPLICATIONKEY' | translate }}</h4>
-            <p class="mb-5">{{device.lorawanSettings?.OTAAapplicationKey}}</p>
-        </ng-container>
-        <ng-container *ngIf="!OTAA">
-            <h4>{{ 'IOTDEVICE.LORA.DEVADDR' | translate }}</h4>
-            <p class="mb-5">{{device.lorawanSettings?.devAddr}}</p>
-            <h4>{{ 'IOTDEVICE.LORA.NETWORKSESSIONKEY' | translate }}</h4>
-            <p class="mb-5">{{device.lorawanSettings?.activationType}}</p>
-            <h4>{{ 'IOTDEVICE.LORA.APPLICATIONSESSIONKEY' | translate }}</h4>
-            <p class="mb-5">{{device.lorawanSettings?.applicationSessionKey}}</p>
-        </ng-container>
-        <h4>{{ 'IOTDEVICE.LORA.SKIPFCNTCHECK' | translate }}</h4>
-        <p class="mb-5">{{device.lorawanSettings?.skipFCntCheck}}</p>
-    </ng-container>
-    <!-- SIGFOX DEVICE-->
-    <ng-container *ngIf="device.type === 'SIGFOX' && device.sigfoxSettings">
-        <h4>{{ 'IOTDEVICE.SIGFOX.GROUP-NAME' | translate }}</h4>
-        <p class="mb-5">{{device.sigfoxSettings.groupName}}</p>
-        
-        <h4>{{ 'IOTDEVICE.SIGFOX.DEVICETYPE' | translate }}</h4>
-        <p class="mb-5">{{device.sigfoxSettings.deviceTypeName}}</p>
-        
-        <h4>{{ 'IOTDEVICE.SIGFOX.PAC' | translate }}</h4>
-        <p class="mb-5">{{device.sigfoxSettings.pac}}</p>
-        
-        <h4>{{ 'IOTDEVICE.SIGFOX.ENDPRODUCTCERTIFICATE' | translate }}</h4>
-        <p class="mb-5">{{device.sigfoxSettings.endProductCertificate}}</p>
-        
-        <h4>{{ 'IOTDEVICE.SIGFOX.PROTOTYPE' | translate }}</h4>
-        <p class="mb-5">{{device.sigfoxSettings.prototype ? 'true' : 'false' | translate}}</p>
-
-
-    </ng-container>
-
-    <!--  IF data package -->
-    <h4>{{ 'IOTDEVICE.DATAPACKAGE' | translate }}</h4>
-    <ng-container *ngIf="device.latestReceivedMessage?.sentTime; then sentTime; else noSentTime">
-    </ng-container>
-    <ng-template #sentTime>
-        <mat-expansion-panel>
-            <mat-expansion-panel-header>
-                <mat-panel-title>
-                    <p>
-                        {{'IOTDEVICE.LATEST-DATAPACKAGE' | translate}}
-                        {{device.latestReceivedMessage?.sentTime | date:'medium'}}
-                    </p>
-                </mat-panel-title>
-            </mat-expansion-panel-header>
-            <ng-container *ngIf="device.latestReceivedMessage?.rawData">
-                <code>
-                                    <pre>
-                                        {{device.latestReceivedMessage.rawData | json }}
-                                    </pre>
-                                </code>
-            <ng-template #locationCommentElseBlock>
-                <p class="mb-5">{{ 'IOTDEVICE.NOCOMMENTONLOCATION' | translate}}</p>
-            </ng-template>
+        <div class="jumbotron m-md-4 p-md-3">
+            <app-iot-device-detail-generic [device]="device" [longitude]=longitude [latitude]="latitude"></app-iot-device-detail-generic>
             <!-- IF  Lora device-->
             <ng-container *ngIf="device.type === 'LORAWAN' && device.lorawanSettings">
-                <h4>{{ 'IOTDEVICE.LORA.DEVEUI' | translate }}</h4>
-                <p class="mb-5">{{device.lorawanSettings.devEUI}}</p>
-                <h4>{{ 'IOTDEVICE.LORA.SERVICEPROFILE' | translate }}</h4>
-                <p class="mb-5">{{serviceProfileName}}</p>
-                <h4>{{ 'IOTDEVICE.LORA.DEVICEPROFILE' | translate }}</h4>
-                <p class="mb-5">{{deviceProfileName}}</p>
-                <ng-container *ngIf="OTAA">
-                    <h4>{{ 'IOTDEVICE.LORA.OTAAAPPLICATIONKEY' | translate }}</h4>
-                    <p class="mb-5">{{device.lorawanSettings?.OTAAapplicationKey}}</p>
-                </ng-container>
-                <ng-container *ngIf="!OTAA">
-                    <h4>{{ 'IOTDEVICE.LORA.DEVADDR' | translate }}</h4>
-                    <p class="mb-5">{{device.lorawanSettings?.devAddr}}</p>
-                    <h4>{{ 'IOTDEVICE.LORA.NETWORKSESSIONKEY' | translate }}</h4>
-                    <p class="mb-5">{{device.lorawanSettings?.activationType}}</p>
-                    <h4>{{ 'IOTDEVICE.LORA.APPLICATIONSESSIONKEY' | translate }}</h4>
-                    <p class="mb-5">{{device.lorawanSettings?.applicationSessionKey}}</p>
-                </ng-container>
-                <h4>{{ 'IOTDEVICE.LORA.SKIPFCNTCHECK' | translate }}</h4>
-                <p class="mb-5">{{device.lorawanSettings?.skipFCntCheck}}</p>
+                <app-iot-device-detail-lorawan [device]="device"></app-iot-device-detail-lorawan>
             </ng-container>
-            <!--  IF data package -->
+            <!-- SIGFOX DEVICE-->
+            <ng-container *ngIf="device.type === 'SIGFOX' && device.sigfoxSettings">
+            <app-iot-device-detail-sigfox [device]="device"></app-iot-device-detail-sigfox>
+            </ng-container>
+            
             <h4>{{ 'IOTDEVICE.DATAPACKAGE' | translate }}</h4>
-            <ng-container *ngIf="device.latestReceivedMessage?.sentTime; then sentTime; else noSentTime">
-            </ng-container>
+            <ng-container *ngIf="device.latestReceivedMessage?.sentTime; then sentTime; else noSentTime"></ng-container>
             <ng-template #sentTime>
                 <mat-expansion-panel>
                     <mat-expansion-panel-header>
@@ -153,10 +28,10 @@
                     </mat-expansion-panel-header>
                     <ng-container *ngIf="device.latestReceivedMessage?.rawData">
                         <code>
-                                            <pre>
-                                                {{device.latestReceivedMessage.rawData | json }}
-                                            </pre>
-                                        </code>
+                            <pre>
+                                {{device.latestReceivedMessage.rawData | json }}
+                            </pre>
+                        </code>
                     </ng-container>
                 </mat-expansion-panel>
             </ng-template>
@@ -166,40 +41,14 @@
                 </p>
             </ng-template>
             <!-- API -->
-            <ng-container *ngIf="device.type">
+            <ng-container *ngIf="device.type === 'GENERIC_HTTP'">
                 <h4>{{ 'IOTDEVICE.GENERIC_HTTP.APIKEY' | translate }}</h4>
                 <!-- <p>{{ 'IOTDEVICE.GENERIC_HTTP.INSTRUCTIONS' | translate }}</p> -->
                 <pre>{{ getGenericHttpDeviceUrl(device) }}</pre>
             </ng-container>
-        </div>
+        </div>        
     </mat-tab>
     <mat-tab label="{{'IOTDEVICE.DOWNLINK-TAB' | translate}}">
-        <div *ngIf="errorMessages && errorMessages?.length !== 0" class="error-messages p-3">
-            <ul class="mb-0">
-              <li *ngFor="let error of errorMessages">
-                {{error}}
-              </li>
-            </ul>
-        </div>
-        <h3 class="p-md-3">{{'IOTDEVICE.DOWNLINK.TITLE' | translate}}</h3>
-        <div *ngIf="device.type === 'LORAWAN'">
-            <mat-slide-toggle [(ngModel)]="downlink.confirmedDownlink" id="confirmedDownlink" name="confirmedDownlink">
-                {{'IOTDEVICE.DOWNLINK.CONFIRMEDDOWNLINK' | translate}}</mat-slide-toggle>
-        </div>
-        <div class="col-xs-6 form-group">
-            <label for="port"
-                class="form-label asterisk-if-mandatory">{{'IOTDEVICE.DOWNLINK.PORT' | translate}}</label>
-            <input type="port" class="form-control" id="port" name="port" maxlength="50" min="0"
-                required [(ngModel)]="downlink.port">
-        </div>
-        <div class="col-xs-6 form-group">
-            <label for="payload"
-                class="form-label asterisk-if-mandatory">{{'IOTDEVICE.DOWNLINK.PAYLOAD' | translate}}</label>
-            <input type="payload" class="form-control" id="payload" name="payload" maxlength="device.type === 'SIGFOX' ? 16 : ''"
-                required [(ngModel)]="downlink.payload">
-        </div>
-        <div class="col-xs-6 form-group">
-            <button (click)="startDownlink()" class="btn btn-secondary" type="button">{{ 'IOTDEVICE.DOWNLINK.START' | translate}}</button>
-        </div>
+        <app-downlink [device]="device" [errorMessages]="errorMessages"></app-downlink>
     </mat-tab>
 </mat-tab-group>
