--- a/src/app/search/search-table/search-table.component.html
+++ b/src/app/search/search-table/search-table.component.html
@@ -5,76 +5,79 @@
     <div class="m-md-4">
         <h3>{{'SEARCH.QUERY' | translate}} {{searchText}}</h3>
     </div>
+    <div class="m-md-4" *ngIf="searchResults.length === 0">
+        {{'SEARCH.NO-RESULTS' | translate}}
+    </div>
+    <div *ngIf="searchResults.length> 0">
+        <div class=" mat-elevation-z8">
+            <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc">
+                <!-- Icon Column -->
+                <ng-container matColumnDef="icon">
+                    <th mat-header-cell *matHeaderCellDef>
+                        {{ 'SEARCH.ICON' | translate }}
+                    </th>
+                    <td mat-cell *matCellDef="let element">
+                        <fa-icon [icon]="getIcon(element.type)"></fa-icon>
+                    </td>
+                </ng-container>
 
-
-    <div class=" mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc">
-            <!-- Icon Column -->
-            <ng-container matColumnDef="icon">
-                <th mat-header-cell *matHeaderCellDef>
-                    {{ 'SEARCH.ICON' | translate }}
-                </th>
-                <td mat-cell *matCellDef="let element">
-                    <fa-icon [icon]="getIcon(element.type)"></fa-icon>
-                </td>
-            </ng-container>
-
-            <!-- Type Column -->
-            <ng-container matColumnDef="type">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
-                    {{ 'SEARCH.TYPE' | translate }}</th>
-                <td mat-cell *matCellDef="let element">
-                    <div *ngIf="element.type == 'IoTDevice'; else typeElse">
-                        {{element.deviceType | translate}}
-                    </div>
-                    <ng-template #typeElse>
-                        {{element.type}}
-                    </ng-template>
-                </td>
-            </ng-container>
-            <!-- Name Column -->
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
-                    {{ 'SEARCH.NAME' | translate }}</th>
-                <td mat-cell *matCellDef="let element">
-                    <a class="application-link" (click)="goToResult()">{{element.name}}</a>
-                </td>
-            </ng-container>
-            <!-- Id Column -->
-            <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef>
-                    {{ 'SEARCH.ID' | translate }}</th>
-                <td mat-cell *matCellDef="let element">
-                    <div *ngIf="element.type == 'IoTDevice'">
-                        <div *ngIf="element.deviceType == 'LORAWAN'">
-                            {{element.deviceEUI}}
+                <!-- Type Column -->
+                <ng-container matColumnDef="type">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
+                        {{ 'SEARCH.TYPE' | translate }}</th>
+                    <td mat-cell *matCellDef="let element">
+                        <div *ngIf="element.type == 'IoTDevice'; else typeElse">
+                            {{element.deviceType | translate}}
                         </div>
-                        <div *ngIf="element.deviceType == 'SIGFOX'">
-                            {{element.deviceId}}
+                        <ng-template #typeElse>
+                            {{element.type}}
+                        </ng-template>
+                    </td>
+                </ng-container>
+                <!-- Name Column -->
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
+                        {{ 'SEARCH.NAME' | translate }}</th>
+                    <td mat-cell *matCellDef="let element">
+                        <a class="application-link" (click)="goToResult()">{{element.name}}</a>
+                    </td>
+                </ng-container>
+                <!-- Id Column -->
+                <ng-container matColumnDef="id">
+                    <th mat-header-cell *matHeaderCellDef>
+                        {{ 'SEARCH.ID' | translate }}</th>
+                    <td mat-cell *matCellDef="let element">
+                        <div *ngIf="element.type == 'IoTDevice'">
+                            <div *ngIf="element.deviceType == 'LORAWAN'">
+                                {{element.deviceEUI}}
+                            </div>
+                            <div *ngIf="element.deviceType == 'SIGFOX'">
+                                {{element.deviceId}}
+                            </div>
+                            <div *ngIf="element.deviceType == 'GENERIC_HTTP'">
+                                {{element.apiKey}}
+                            </div>
                         </div>
-                        <div *ngIf="element.deviceType == 'GENERIC_HTTP'">
-                            {{element.apiKey}}
+                        <div *ngIf="element.type == 'Application'" class="application-link">{{element.id}}</div>
+                        <div *ngIf="element.type == 'Gateway'" class="application-link">{{element.gatewayId}}
                         </div>
-                    </div>
-                    <div *ngIf="element.type == 'Application'" class="application-link">{{element.id}}</div>
-                    <div *ngIf="element.type == 'Gateway'" class="application-link">{{element.gatewayId}}
-                    </div>
-                </td>
-            </ng-container>
-            <!-- Org Column -->
-            <ng-container matColumnDef="org">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
-                    {{ 'SEARCH.ORGANISATION' | translate }}</th>
-                <td mat-cell *matCellDef="let element">
-                    {{element.organizationName}}
-                </td>
-            </ng-container>
+                    </td>
+                </ng-container>
+                <!-- Org Column -->
+                <ng-container matColumnDef="org">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
+                        {{ 'SEARCH.ORGANISATION' | translate }}</th>
+                    <td mat-cell *matCellDef="let element">
+                        {{element.organizationName}}
+                    </td>
+                </ng-container>
 
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" [length]="resultsLength"
-            showFirstLastButtons></mat-paginator>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+            <mat-paginator [pageSizeOptions]="[5, 10, 20]" [length]="resultsLength"
+                showFirstLastButtons></mat-paginator>
+        </div>
     </div>
 </ng-template>
